2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* gfile.[ch]:
	Add follow_symlinks argument to get_info
	
	* gfileinfo.[ch]:
	Some mask fixes
	
	* gfilesimple.c:
	More implementation work
	
	* glocalfileoutputstream.[ch]:
	Implement set_original_mtime and set_create_backup

2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* Makefile:
	Add gfilesimple
	
	* gfile.[ch]:
	Add g_file_copy()
	Finish rename to parse_name
	Remove set_keep_open for now
	
	* gfilesimple.[ch]:
	Initial skeleton for GFileSimple
	Handle parse names
	
	* gvfssimple.c:
	Handle parse names

2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* gfileenumerator.c:
	* gfileinfo.c:
	* gfileinputstream.c:
	* gfileoutputstream.c:
	* ginputstream.c:
	* glocalfileinputstream.c:
	* glocalfileoutputstream.c:
	* goutputstream.c:
	* gvfssimple.c:
	Use macro-created parent_class

2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* gfile.c:
	* gvfs.[ch]:
	* gvfssimple.c:
	Clean up parse_name names.

2006-09-28  Alexander Larsson  <alexl@redhat.com>

	* gfile.[ch]:
	Add request flags & attributes
	Use FileStreams
	
	* gfileinputstream.h:
	* gfileoutputstream.h:
	Fix G_TYPE_... defines
	
	* glocalfileoutputstream.c:
	Small cleanups and mention gedit.

2006-09-27  Alexander Larsson  <alexl@redhat.com>

	* gfileinfo.[ch]:
	Added g_file_info_new, g_file_info_set_from_stat
	
	* glocalfileinputstream.c:
	* glocalfileoutputstream.c:
	Implemented get_file_info.

2006-09-27  Alexander Larsson  <alexl@redhat.com>

	* glocalfileoutputstream.c:
	Update implementation of final mtime

2006-09-27  Alexander Larsson  <alexl@redhat.com>

	* gfileinfo.h:
	* gfileinputstream.[ch]:
	* gfileoutputstream.[ch]:
	Flags & attributes in get_file_info

2006-09-27  Alexander Larsson  <alexl@redhat.com>

	* Makefile:
	* ginputstreamfile.[ch]:
	* goutputstreamfile.[ch]:
	* glocalfileinputstream.[ch]:
	* glocalfileoutputstream.[ch]:
	Rename local file streams and make them
	inherit from FileInput/OutputStream
	
	* test.c:
	Update
